--- a/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
@@ -72,7 +72,7 @@
                                             <table style="margin-bottom:20px">
                                                 <tr>
                                                     <td style="padding-right:30px">
-                                                        <input type="checkbox" name="checka4" id="checka4" value="A4" /> A4
+                                                        <input checked="checked" type="checkbox" name="checka4" id="checka4" value="A4" /> A4
                                                     </td>
                                                     <td style="padding-right:30px">
                                                         <input type="checkbox" name="checka3" id="checka3" value="A3" /> A3
