--- a/E-Commerce_MultiTenant/Views/ShoppingCart/ShowCart.cshtml
+++ b/E-Commerce_MultiTenant/Views/ShoppingCart/ShowCart.cshtml
@@ -6,92 +6,102 @@
 @{
     Layout = "~/Views/Shared/_LayoutNoWhiteBar.cshtml";
 }
-<div class="container" style="margin-top:5%">
+<div class="container" id="keranjang" style="margin-top:5%">
 
     <h3 class="text-center">Keranjang Belanja</h3>
     <hr />
     <br />
-    <table class="table">
-        <tr>
-            <th>
-                Desain
-            </th>
-            <th>
-                Nomor Detail
-            </th>
-            <th>
-                Nama Produk
-            </th>
-            <th>
-                Nama Bahan
-            </th>
-            <th>
-                Nama Sablon
-            </th>
-
-
-            <th>
-                Jumlah
-            </th>
-            <th>
-                Subtotal
-            </th>
-
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
+    <table id="tabelpesanan" class="table table-striped">
+        @foreach (var item in Model.Select((value, i) => new { i, value }))
         {
             <tr>
                 <td>
-                    <img src="~/Content/Images/@item.desain" class="img-responsive" style="max-height:50px;max-width:50px" />
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.no_detail)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.namaproduk)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.namabahan)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.namasablon)
-                </td>
+                    <div class="thumbnail clearfix text-center" style="max-width:1500px;width:100%">
+                        <table class="table">
+                            <tr>
+                                <th colspan="6" style="padding-left:30px">
+                                    <h3>  @item.value.namaproduk @item.value.namabahan - @item.value.namasablon</h3>
+                                </th>
+                            </tr>
+                            <tr>
+                                <td align="center" rowspan="2"> <img src="~/Content/Images/@item.value.desain" class="img-responsive" style="max-height:100px;max-width:100px" /></td>
+                                <td>
+                                    <b> Warna :</b>
+                                </td>
+                                <td align="left">
+                                    <div style="background-color:@item.value.warna;border:1px solid grey;width:30px;height:30px;display:inline-block;border-radius:5px"></div>
+                                </td>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.jumlah)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.subtotal)
-                </td>
 
-                <td>
-
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                                <td><b>Subtotal : </b></td>
+                                <td align="left">
+                                    Rp @String.Format("{0:n0}", item.value.subtotal)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Delete", "Delete",null, new { @class = "btn btn-danger" })
+                                </td>
+                            </tr>
+                            <tr>
+                                
+                                <td align="left" colspan="5" style="padding-left:80px">
+                                    @foreach (var item2 in ViewBag.Ukuran)
+                                    {
+                                        if (item2.no_detail == item.value.no_detail)
+                                        {
+                                            <p style="font-size:10px">@item2.ukuran @item2.tambahan - @item2.jumlah</p>
+                                        }
+                                    }
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><p>@item.value.catatan</p></td>
+                                <td><b>Jumlah : </b></td>
+                                <td align="left">@item.value.jumlah</td>
+                            </tr>
+                        </table>
+                    </div>
                 </td>
             </tr>
-            <tr>
-                <th>Ukuran</th>
-                <th>Jumlah</th>
-                <th>Tambahan</th>
-            </tr>
-            foreach (var item2 in ViewBag.Ukuran)
-            {
-                if (item2.no_detail == item.no_detail)
-                {
-                    <tr>
-                        <td>@item2.ukuran</td>
-                        <td>@item2.jumlah</td>
-                        <td>@item2.tambahan</td>
-                    </tr>
-                }
-            }
+
+
+
+
+
         }
-
     </table>
+    <br />
+    <p class="text-center" style="font-size:11px;color:red">*Harga di atas merupakan <b>harga sementara</b>, belum termasuk diskon serta perhitungan harga desain dan warna</p>
+    <p class="text-center" style="font-size:11px;color:red">Pesanan di atas akan dikirimkan ke email konveksi untuk dilihat desain dan permintaannya untuk menentukan harga fix</p>
+    <p class="text-center" style="font-size:11px;color:red">Harga fix akan diinfokan oleh konveksi melalui e-mail pembeli yang terdaftar</p>
+    <p class="text-center" style="font-size:11px;color:red">Harga fix bisa lebih atau kurang dari harga sementara</p>
+    <br />
     <div class="text-center">
-        @Html.ActionLink("Cetak Invoice", "KonfirmasiKirim", "ShoppingCart", null, new { onclick = "return confirm('Anda yakin sudah selesai melakukan pemesanan? Data keranjang belanja akan kosong setelah invoice dicetak')", @class = "btn btn-primary hvr-grow" })
-
+        @*@Html.ActionLink("Kirim Pesanan", "KonfirmasiKirim", "ShoppingCart", null, new { onclick = "return confirm('Anda yakin sudah selesai melakukan pemesanan? Data keranjang belanja akan kosong setelah invoice dicetak')", @class = "btn btn-primary hvr-grow" })*@
+        <button class="btn btn-primary hvr-grow" onclick="kirim()">Kirim Pesanan</button>
     </div>
 </div>
+<script type="text/javascript">
+        var kirim = function() {
+            //send email button click event
+
+                //get the table content
+            var tablevalue = "<table>" + $("#tabelpesanan").html() + "</table>";
+                //using Ajax to call the action method
+                $.ajax({
+                    url: '@Url.Action("SendMailToUser2", "ShoppingCart")', //
+                    dataType: "json",
+                    data: JSON.stringify({ table: tablevalue }),
+                    type: "POST",
+                    contentType: "application/json; charset=utf-8",
+                    success: function (result) {
+                        alert("success");
+                    },
+                    error: function (xhr) {
+                        alert("error");
+                    }
+                });
+                return false;
+
+
+    };
+</script>
