otw auto ngitung harga di view pesan

--- a/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
@@ -272,9 +272,9 @@
                 </tr>
             </table>
             <br />
-            <p style="font-size:11px;color:red">*Harga di atas merupakan <b>harga sementara</b>, belum termasuk diskon serta perhitungan harga desain dan warna</p>
+            @*<p style="font-size:11px;color:red">*Harga di atas merupakan <b>harga sementara</b>, belum termasuk diskon serta perhitungan harga desain dan warna</p>
             <p style="font-size:11px;color:red">Harga fix akan diinfokan oleh konveksi melalui e-mail pembeli yang terdaftar</p>
-            <p style="font-size:11px;color:red">Harga fix bisa lebih atau kurang dari harga sementara</p>
+            <p style="font-size:11px;color:red">Harga fix bisa lebih atau kurang dari harga sementara</p>*@
             <br />
             <div class="text-center">
                 <button class="btn btn-primary" onclick="history.go(-1);">Ubah Data Pesanan</button>
