--- a/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
@@ -29,10 +29,20 @@
                                     <tr><td style="text-align:center"><img src="http://localhost:52494/Content/Images/@Session["fotoproduk"].ToString()" style="min-height:200px;height:200px;" /></td></tr>
                                     <tr><td></td></tr>
                                     <tr><td><p>@Session["deskripsi"].ToString()</p></td></tr>
+                                    <tr><td colspan="2"><h4>Rp </h4></td>
+                                        <td><h4 id="hargahitung">0</h4></td></tr>
                                 </table>
                             </td>
                             <td><div class="divider" style="margin-left:40px"></div></td>
                             <td style="padding-left:100px">
+                                @foreach (var hargabahan in ViewBag.HargaBahan)
+    {
+                            <input type="hidden" name="hargabahan_@hargabahan.id_bahan" value="@hargabahan.harga" id="hargabahan_@hargabahan.id_bahan" />
+}
+                                @foreach (var hargasablon in ViewBag.HargaSablon)
+    {
+                            <input type="hidden" name="hargasablon_@hargasablon.id_jns_sablon" value="@hargasablon.harga" id="hargasablon_@hargasablon.id_jns_sablon" />
+}
                                 <table style="border:0 solid;float:none">
                                     <tr>
                                         <td style="padding-bottom:20px">
@@ -365,3 +375,32 @@
         }
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        var hargabahan = 0;
+        var hargasablon = 0;
+        var hargafinal = 0;
+        $("#dropdownbahan").change(function () {
+            var tes = document.getElementById('dropdownbahan').selectedOptions[0].value
+            //alert(tes);
+             hargabahan = parseInt($("#hargabahan_" + tes).val());
+            hitung();
+            alert(hargabahan);
+        })
+        $("#dropdownsablon").change(function () {
+            var tes = document.getElementById('dropdownsablon').selectedOptions[0].value
+            //alert(tes);
+            hargasablon = parseInt($("#hargasablon_" + tes).val());
+            hitung();
+            alert(hargasablon);
+        })
+
+        var hitung = function() {
+            hargafinal = hargabahan + hargasablon;
+            $("#hargahitung").text(hargafinal);
+            //alert(hargafinal);
+        }
+        
+    })
+</script>
