--- a/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
@@ -132,7 +132,7 @@
                                         <td style="padding-bottom:20px">
                                             <table>
                                                 <tr>
-                                                    <td style="padding-right:10px">Anak</td>
+                                                    <td style="padding-right:10px"><p>Anak</p><p style="font-size:9px">43 x 56cm</p></td>
 
                                                     <td>
                                                         <input type="number" class="form-control text-center" min="0"
