--- a/E-Commerce_MultiTenant/Views/ShoppingCart/ShowCart.cshtml
+++ b/E-Commerce_MultiTenant/Views/ShoppingCart/ShowCart.cshtml
@@ -93,8 +93,9 @@
             </div>
             <div class="modal-footer">
                 <div class="text-center">
-                    <a href="#" class="btn btn-danger" onclick="tidakdikirim()">Tidak</a>
                     <a href="#" class="btn btn-success" onclick="dikirim()">Ya</a>
+                    <a href="#" class="btn btn-danger" onclick="tidakdikirim()">Tidak</a>
+
                 </div>
             </div>
         </div>
@@ -152,7 +153,7 @@
                     type: "POST",
                     contentType: "application/json; charset=utf-8",
                     success: function (result) {
-                        alert("email terkirim");
+                        alert("success");
                         $("#modalkirim").modal('hide');
                         invoice();
                     },
