--- a/E-Commerce_MultiTenant/Views/ShoppingCart/GetAllOrder.cshtml
+++ b/E-Commerce_MultiTenant/Views/ShoppingCart/GetAllOrder.cshtml
@@ -78,7 +78,8 @@
                 </td>
                 <td>
                     <button class="btn btn-primary btn-xs" onclick="location.href='@Url.Action("DetailOrderKaryawan","ShoppingCart")/?id=@item.no_order'">Lihat Detail</button>
-                    
+                    <button class="btn btn-primary btn-xs" onclick="location.href='@Url.Action("KonfirmasiBayar","ShoppingCart")/?id=@item.no_order'">Konfirmasi Bayar</button>
+
                 </td>
             </tr>
         }
